--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>唐诗展示</title>
+    <title>唐诗</title>
     <style>
         body {
             font-family: "微软雅黑", sans-serif;
@@ -74,3 +74,4 @@
 
 </body>
 </html>
+
